test/mason/mason-prereq/run-git-prereq.good
Compiling [debug] target: git_prereq_app
$CHPL_HOME/test/mason/mason-prereq/mason_home/git/GitPrereqLib-HEAD/src/GitPrereqLib.chpl:2: error: Could not find C function for hello;  perhaps it is missing or is a macro?
mason build failed
